<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_layout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/current_weather_container"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:orientation="vertical"
        android:background="@drawable/sea_sunnypng"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/today_weather_container"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/today_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_padding_small"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"
                android:text="@string/today_label"
                android:textSize="@dimen/text_size_header" />

            <TextView
                android:id="@+id/last_update_tv"
                android:layout_below="@id/today_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_padding_small"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:text="@string/today_label"
                android:textSize="@dimen/text_size_header" />

            <TextView
                android:id="@+id/today_temp_tv"
                android:layout_below="@id/last_update_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_padding_small"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:text="25"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_xxhuge" />

            <TextView
                android:id="@+id/today_temp_text_tv"
                android:layout_below="@id/today_temp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_padding_small"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:text="@string/sunny"
                android:textSize="@dimen/text_size_huge" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/today_weather_stats_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/today_min_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="0"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_large" />

                    <TextView
                        android:id="@+id/today_min_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/today_min"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_header" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/today_current_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="0"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_large" />

                    <TextView
                        android:id="@+id/today_current_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/today_current"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_header" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/today_max_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="0"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_large" />

                    <TextView
                        android:id="@+id/today_max_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/today_max"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_header" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forecast_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:layout_marginTop="@dimen/fab_margin"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_weather_container" />

</androidx.constraintlayout.widget.ConstraintLayout>
